# a-share-theme-trading-system

./: .env.example  .gitignore  README.md  pyproject.toml  trading-system.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/workspace/nilptr11/: index.md  journal-1.md
data/tushare-news/: README.md
data/tushare-news/2026-05-25-1955/: source-cls.md  source-sina.md
data/tushare-news/2026-05-26-0940/: source-10jqka.md  source-yuncaijing.md  sources.md
docs/trading-system/: trading-reference.md  trading-templates.md
docs/tushare-news/: README.md  api-reference.md  fetch-method.md
docs/tushare-news/2026-05-25-1955/: source-eastmoney.md  source-yicai.md
docs/tushare-news/2026-05-26-0940/: source-cls.md  source-eastmoney.md  source-fenghuang.md  source-jinrongjie.md  source-sina.md  source-wallstreetcn.md  source-xq.md  source-yicai.md
docs/tushare_news/: fetch-method.md  page-structure.md
docs/tushare_news/2026-05-25-1955/: source-10jqka.md  source-fenghuang.md  source-jinrongjie.md  source-wallstreetcn.md  (+3 more)
scripts/: daily_scan.py  fetch_tushare_news.py  market_data.py  market_scanner.py  tushare_proxy.py
src/theme_trading/: __init__.py
tests/: test_scanner_rules.py  test_signal_layering.py
trading-journal/: PLAN.md  README.md  trades.csv
trading-journal/trades/: trade-review-template.md  trade-template.md
trading-system/: review-templates.md  trading-playbook.md  trading-reference.md
trading-system/appendices/: human-vs-quant.md  quantitative-standards.md  trading-costs.md
trading-system/examples/: low-volume-breakout.md
(+51 files in other folders)
