[project]
name = "a-share-theme-trading-system"
version = "0.1.0"
description = "A-share theme trading system scripts"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "tushare>=1.4.0",
]

[project.scripts]
daily-scan = "theme_trading.cli.daily_scan:main"
fetch-tushare-news = "theme_trading.cli.fetch_news:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
